RESOLVED FIXED205205
Fix compile errors in BaseAudioSharedUnit.h
https://bugs.webkit.org/show_bug.cgi?id=205205
Summary Fix compile errors in BaseAudioSharedUnit.h
cathiechen
Reported 2019-12-13 08:19:59 PST
Need to include some headers and add `#pragma once` in the front.
Attachments
Patch (1.57 KB, patch)
2019-12-13 08:38 PST, cathiechen
no flags
cathiechen
Comment 1 2019-12-13 08:38:15 PST
WebKit Commit Bot
Comment 2 2019-12-13 09:37:43 PST
Comment on attachment 385605 [details] Patch Clearing flags on attachment: 385605 Committed r253481: <https://trac.webkit.org/changeset/253481>
WebKit Commit Bot
Comment 3 2019-12-13 09:37:44 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.