Fixed compile error in BaseAudioSharedUnit.h https://bugs.webkit.org/show_bug.cgi?id=205205

Need to include some headers and put "#pragma once" in front.

Unreviewed, fixed compile error.


* platform/mediastream/mac/BaseAudioSharedUnit.h:


Canonical link: https://commits.webkit.org/218405@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253481 268f45cc-cd09-0410-ab3c-d52691b4dbfc